--- a/pokedex.html
+++ b/pokedex.html
@@ -51,6 +51,15 @@
                         </thead>
                         <tbody id="table_body">
                             <!-- place holder for pokemon table rows -->
+                            <tr>
+                                <td colspan="10">
+                                    <div class="d-flex justify-content-center">
+                                        <div class="spinner-border" role="status">
+                                            <span class="visually-hidden">Loading...</span>
+                                        </div>
+                                    </div>
+                                </td>
+                            </tr>
                         </tbody>
                     </table>
                 </div>
