--- a/pokedex.html
+++ b/pokedex.html
@@ -53,10 +53,9 @@
                             <!-- place holder for pokemon table rows -->
                             <tr>
                                 <td colspan="10">
-                                    <div class="d-flex justify-content-center">
-                                        <div class="spinner-border" role="status">
-                                            <span class="visually-hidden">Loading...</span>
-                                        </div>
+                                    <div class="d-flex align-items-center">
+                                        <strong>Loading Pokemon Data...</strong>
+                                        <div class="spinner-border ms-auto" role="status"></div>
                                     </div>
                                 </td>
                             </tr>
