--- a/moves.html
+++ b/moves.html
@@ -30,6 +30,9 @@
                 <li class="nav-item">
                     <a class="nav-link active" href="#">Moves</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="locations.html">Locations</a>
+                </li>
             </ul>
 
             <div class="container p-0">
