--- a/locations.html
+++ b/locations.html
@@ -15,7 +15,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
         <!-- script for requesting and organizing data from the server -->
-        <script src="pokedex_script.js"></script>
+        <script src="locations_script.js"></script>
     </head>
     <body class="bg-light"> 
         <!-- main body -->
