--- a/locations.html
+++ b/locations.html
@@ -47,7 +47,15 @@
                             </tr>
                         </thead>
                         <tbody id="table_body">
-                            <!-- place holder for pokemon table rows -->
+                            <!-- place holder for location table rows -->
+                            <tr>
+                                <td colspan="10">
+                                    <div class="d-flex align-items-center">
+                                        <strong>Loading Location Data...</strong>
+                                        <div class="spinner-border ms-auto" role="status"></div>
+                                    </div>
+                                </td>
+                            </tr>
                         </tbody>
                     </table>
                 </div>
