--- a/moves.html
+++ b/moves.html
@@ -37,7 +37,7 @@
 
             <div class="container p-0">
                 <div class="table-responsive border border-light">
-                    <table class="table table-sm table-hover table-striped">
+                    <table class="table table-sm table-hover">
                         <thead>
                             <tr>
                                 <th>Name</th>
