search boxes stack in narrow window

--- a/pokedex.html
+++ b/pokedex.html
@@ -25,19 +25,19 @@
 
         <div class="container mt-3">
             <div class="row">
-                <div class="col">
+                <div class="col-md">
                     <input type="text" class="form-control" id="dex" onkeyup="searchPokemon(0)" placeholder="Search Dex.no">
                 </div>
-                <div class="col">
+                <div class="col-md">
                     <input type="text" class="form-control" id="name" onkeyup="searchPokemon(1)" placeholder="Search Names">
                 </div>
-                <div class="col">
+                <div class="col-md">
                     <input type="text" class="form-control" id="cat" onkeyup="searchPokemon(2)" placeholder="Search Category">
                 </div>
-                <div class="col">
+                <div class="col-md">
                     <input type="text" class="form-control" id="ability" onkeyup="searchPokemon(6)" placeholder="Search Ability">
                 </div>
-                <div class="col">
+                <div class="col-md">
                     <input type="text" class="form-control" id="type" onkeyup="searchPokemon(7)" placeholder="Search Type">
                 </div>
             </div>
