floating search box labels

--- a/pokedex.html
+++ b/pokedex.html
@@ -26,19 +26,34 @@
         <div class="container mt-3">
             <div class="row">
                 <div class="col-md">
-                    <input type="text" class="form-control" id="dex" onkeyup="searchPokemon(0)" placeholder="Search Dex.no">
+                    <div class="form-floating">
+                        <input type="text" class="form-control" id="dex" onkeyup="searchPokemon(0)" placeholder="Search Dex.no">
+                        <label for="dex">Search Dex.no</label>
+                    </div>
                 </div>
                 <div class="col-md">
-                    <input type="text" class="form-control" id="name" onkeyup="searchPokemon(1)" placeholder="Search Names">
+                    <div class="form-floating">
+                        <input type="text" class="form-control" id="name" onkeyup="searchPokemon(1)" placeholder="Search Name">
+                        <label for="name">Search Name</label>
+                    </div>
                 </div>
                 <div class="col-md">
-                    <input type="text" class="form-control" id="cat" onkeyup="searchPokemon(2)" placeholder="Search Category">
+                    <div class="form-floating">
+                        <input type="text" class="form-control" id="cat" onkeyup="searchPokemon(2)" placeholder="Search Category">
+                        <label for="cat">Search Category</label>
+                    </div>
                 </div>
                 <div class="col-md">
-                    <input type="text" class="form-control" id="ability" onkeyup="searchPokemon(6)" placeholder="Search Ability">
+                    <div class="form-floating">
+                        <input type="text" class="form-control" id="ability" onkeyup="searchPokemon(6)" placeholder="Search Ability">
+                        <label for="ability">Search Ability</label>
+                    </div>
                 </div>
                 <div class="col-md">
-                    <input type="text" class="form-control" id="type" onkeyup="searchPokemon(7)" placeholder="Search Type">
+                    <div class="form-floating">
+                        <input type="text" class="form-control" id="type" onkeyup="searchPokemon(7)" placeholder="Search Type">
+                        <label for="type">Search Type</label>
+                    </div>
                 </div>
             </div>
         </div>
