--- a/pokedex.html
+++ b/pokedex.html
@@ -23,6 +23,7 @@
         <!-- main body -->
         <script src="pokedex_script.js"></script>
 
+        <!-- search bar -->
         <div class="container mt-3">
             <div class="row">
                 <div class="col-md">
@@ -73,6 +74,7 @@
                 </li>
             </ul>
 
+            <!-- main table -->
             <div class="container p-0">
                 <div class="table-responsive border border-light">
                     <table class="table table-sm table-hover">
