--- a/pokedex.html
+++ b/pokedex.html
@@ -12,6 +12,7 @@
         <!-- Bootstrap -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
         
         <!-- JQuery -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -29,31 +30,31 @@
                 <div class="col-md">
                     <div class="form-floating">
                         <input type="text" class="form-control" id="dex" onkeyup="searchPokemon(0)" placeholder="Search Dex.no">
-                        <label for="dex">Search Dex.no</label>
+                        <label for="dex"><i class="bi bi-search"></i> Dex.no</label>
                     </div>
                 </div>
                 <div class="col-md">
                     <div class="form-floating">
                         <input type="text" class="form-control" id="name" onkeyup="searchPokemon(1)" placeholder="Search Name">
-                        <label for="name">Search Name</label>
+                        <label for="name"><i class="bi bi-search"></i> Name</label>
                     </div>
                 </div>
                 <div class="col-md">
                     <div class="form-floating">
                         <input type="text" class="form-control" id="cat" onkeyup="searchPokemon(2)" placeholder="Search Category">
-                        <label for="cat">Search Category</label>
+                        <label for="cat"><i class="bi bi-search"></i> Category</label>
                     </div>
                 </div>
                 <div class="col-md">
                     <div class="form-floating">
                         <input type="text" class="form-control" id="ability" onkeyup="searchPokemon(6)" placeholder="Search Ability">
-                        <label for="ability">Search Ability</label>
+                        <label for="ability"><i class="bi bi-search"></i> Ability</label>
                     </div>
                 </div>
                 <div class="col-md">
                     <div class="form-floating">
                         <input type="text" class="form-control" id="type" onkeyup="searchPokemon(7)" placeholder="Search Type">
-                        <label for="type">Search Type</label>
+                        <label for="type"><i class="bi bi-search"></i> Type</label>
                     </div>
                 </div>
             </div>
